[package]
name = "base16-templater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
glob = "0.3.1"
mustache = "0.9.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
